Fixed Google Plus icon sometimes being overlapped by overflow Revert to YouTube Comments if there aren't any Reddit results

--- a/res/style.css
+++ b/res/style.css
@@ -265,8 +265,8 @@ article a:hover {
 }
 
 .at_gplus {
-    position: absolute;
-    right: 0;
+    float: right;
+    margin-right: -30px;
     margin-top: 5px;
 }
 
